--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,5 +41,5 @@ jobs:
       # Step 6: Build and push Docker image saidalo
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/ChannelService:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/ChannelService:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/channel-service:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/channel-service:latest
