--- a/build.gradle
+++ b/build.gradle
@@ -44,10 +44,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2' // JJWT API
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2' // JJWT Implementation
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
-//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
-//    implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
-//    implementation 'org.springdoc:springdoc-openapi-security:1.6.15'
 
 
     compileOnly 'org.projectlombok:lombok'
