--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+    implementation 'software.amazon.awssdk:s3:2.28.0'
 
 //    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 //    implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
