--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -36,3 +36,16 @@ logging:
   level:
     org.springframework.web: DEBUG
     org.springframework.security: DEBUG
+
+
+
+cloud:
+  aws:
+    credentials:
+      accessKey: AKIA6GBMGGFRCYJEPOLK
+      secretKey: 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
+    region:
+      static: EU_NORTH_1
+    s3:
+      bucket: metube-bucket
+
