--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,11 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.7.2'
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
     implementation 'software.amazon.awssdk:s3:2.28.0'
 
 //    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
