--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
+    implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'software.amazon.awssdk:s3:2.28.0'
 
@@ -55,12 +58,14 @@ dependencies {
 //    implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
 //    implementation 'org.springdoc:springdoc-openapi-security:1.6.15'
 
+    implementation 'metube.com:metube_library:1.0.10'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 
 }
 
