--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,10 @@ jobs:
           chmod +x ./gradlew
           ./gradlew clean build
 
+        env:
+          USERNAME: ${{ secrets.USERNAME_GITHUB }}
+          TOKEN: ${{ secrets.TOKEN_GITHUB }}
+
       # Step 4: Set up Docker
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
