--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
-gpr.user=sadialoshamsiyev
-gpr.token=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
+#gpr.user=sadialoshamsiyev
+#gpr.token=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
