--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,7 +22,14 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
 
-
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+    consumer:
+      group-id: auth-service
+      auto-offset-reset: earliest
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 eureka:
   client:
@@ -30,15 +37,13 @@ eureka:
       defaultZone: ${EUREKA_URI:http://${EUREKA_HOST:localhost}:8761/eureka/}
   instance:
     preferIpAddress: true
-#springdoc:
-#  swagger-ui:
-#    config-url: /api/channel/v3/api-docs
-#    path: /api/channel/swagger-ui
+
 springdoc:
   swagger-ui:
     path: /api/channel/swagger-ui
   api-docs:
     path: /api/channel/v3/api-docs
+
 logging:
   level:
     org.springframework.web: DEBUG
@@ -48,13 +53,9 @@ logging:
 cloud:
   aws:
     credentials:
-      accessKey: AKIA6GBMGGFRG54EE3UK
-      secretKey: 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
+      accessKey: AKIA6GBMGGFRI3DD7TH4
+      secretKey: 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
     region:
       static: EU_NORTH_1
     s3:
-      bucket: metube-bucket-mic
-
-
-jwt:
-  secret: qwefklsdfj3roif134adsj14fdslkjf1234fiodwq
+      bucket: my-team-bucket-b30
