--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
   application:
     name: CHANNEL-SERVICE
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:5432/metube
+    url: jdbc:postgresql://${DB_HOST:localhost}:5432/metube_local
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:1234}
   jpa:
@@ -23,13 +23,10 @@ spring:
 
 
   kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
-    consumer:
-      group-id: auth-service
-      auto-offset-reset: earliest
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:broker:29092}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 eureka:
   client:
