--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -53,6 +53,8 @@ cloud:
       accessKey: AKIA6GBMGGFRI3DD7TH4
       secretKey: 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
     region:
-      static: EU_NORTH_1
+      static: us-east-1
     s3:
       bucket: my-team-bucket-b30
+
+
