--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -51,5 +51,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-            docker build -t ${{ secrets.DOCKER_USERNAME }}/channel-service:${{ env.VERSION }} .
-            docker push ${{ secrets.DOCKER_USERNAME }}/channel-service:${{ env.VERSION }}
+            docker build -t ${{ secrets.DOCKER_USERNAME }}/channel-service1:${{ env.VERSION }} .
+            docker push ${{ secrets.DOCKER_USERNAME }}/channel-service1:${{ env.VERSION }}
