--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,13 +43,21 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Step 6: Build and push Docker image saidalo
-#      - name: Build and push Docker image
-#        run: |
-#          docker build -t ${{ secrets.DOCKER_USERNAME }}/channel-service:latest .
-#          docker push ${{ secrets.DOCKER_USERNAME }}/channel-service:latest
+      #      - name: Build and push Docker image
+      #        run: |
+      #          docker build -t ${{ secrets.DOCKER_USERNAME }}/channel-service:latest .
+      #          docker push ${{ secrets.DOCKER_USERNAME }}/channel-service:latest
 
 
+
+
+      # Step 6: Define the VERSION environment variable
+      - name: Set version
+        run: echo "VERSION=1.0.0" >> $GITHUB_ENV
+
+        # Step 7: Build and push Docker image
       - name: Build and push Docker image
         run: |
-            docker build -t ${{ secrets.DOCKER_USERNAME }}/channel-service1:${{ env.VERSION }} .
-            docker push ${{ secrets.DOCKER_USERNAME }}/channel-service1:${{ env.VERSION }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/channel-service1:${{ env.VERSION }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/channel-service1:${{ env.VERSION }}
+
