--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -48,14 +48,26 @@ logging:
     org.springframework.security: DEBUG
 
 
+#cloud:
+#  aws:
+#    credentials:
+#      accessKey: AKIA6GBMGGFRI3DD7TH4
+#      secretKey: 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
+#    region:
+#      static: us-east-1
+#    s3:
+#      bucket: my-team-bucket-b30
+
+
 cloud:
   aws:
     credentials:
-      accessKey: AKIA6GBMGGFRI3DD7TH4
-      secretKey: 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
+      accessKey: ${AWS_ACCESS_KEY_ID}
+      secretKey: ${AWS_SECRET_ACCESS_KEY}
     region:
       static: us-east-1
     s3:
       bucket: my-team-bucket-b30
+
 
 
