--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,25 +43,17 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
 
-          # Step 6: Set the VERSION dynamically
+
+
+      # Step 6: Define the VERSION environment variable
       - name: Set version
-        run: echo "VERSION=${{ github.run_number }}" >> $GITHUB_ENV
-
-
+        run: echo "VERSION=3" >> $GITHUB_ENV
 
         # Step 7: Build and push Docker image
       - name: Build and push Docker image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/channel-service1:${{ env.VERSION }} .
           docker push ${{ secrets.DOCKER_USERNAME }}/channel-service1:${{ env.VERSION }}
-
-        # Step 8: Deploy with Docker Compose
-      - name: Deploy Docker Compose
-        run: |
-          docker-compose -f docker-compose.yml up -d
-        env:
-         CHANNEL_SERVICE_VERSION: ${{ env.VERSION }}
-      
       
 
       #      # Step 6: Build and push Docker image saidalo
@@ -72,14 +64,4 @@ jobs:
 
 
 
-
-      # Step 6: Define the VERSION environment variable
-#      - name: Set version
-#        run: echo "VERSION=2" >> $GITHUB_ENV
-#
-#        # Step 7: Build and push Docker image
-#      - name: Build and push Docker image
-#        run: |
-#          docker build -t ${{ secrets.DOCKER_USERNAME }}/channel-service1:${{ env.VERSION }} .
-#          docker push ${{ secrets.DOCKER_USERNAME }}/channel-service1:${{ env.VERSION }}
 
