--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,8 @@ server:
 
 
 spring:
+  profiles:
+    active: default
   servlet:
     multipart:
       max-file-size: 10MB
@@ -11,6 +13,7 @@ spring:
     name: CHANNEL-SERVICE
   datasource:
     url: jdbc:postgresql://${DB_HOST:localhost}:5432/metube
+
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:8463}
   jpa:
@@ -54,8 +57,8 @@ logging:
 cloud:
   aws:
     credentials:
-      accessKey: ${AWS_ACCESS_KEY_ID}
-      secretKey: ${AWS_SECRET_ACCESS_KEY}
+      accessKey: AKIA6GBMGGFRI3DD7TH4
+      secretKey: 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
     region:
       static: us-east-1
     s3:
